# ModelOrderReduction

./: .gitignore  CMakeLists.txt  ModelOrderReduction.txt  ModelOrderReductionConfig.cmake.in  README.md  initModelOrderReduction.h
.github/workflows/: ci.yml
ModelOrderReduction_test/: CMakeLists.txt  ModelOrderReduction_test.cpp
cmake/: environment.cmake
component/forcefield/: Forcefield_Files.cmake  Forcefield_Links.cmake  HyperReducedTetrahedronFEMForceField.h  HyperReducedTetrahedronFEMForceField.inl  HyperReducedTetrahedronHyperelasticityFEMForceField.h  HyperReducedTetrahedronHyperelasticityFEMForceField.inl  HyperReducedTriangleFEMForceField.inl  MappedMatrixForceFieldAndMass.h  MappedMatrixForceFieldAndMass.inl  MappedMatrixForceFieldAndMassMOR.cpp  MappedMatrixForceFieldAndMassMOR.h  MappedMatrixForceFieldAndMassMOR.inl
component/loader/: Loader_Files.cmake
component/loader/modules/: MatrixLoader.inl  Modules.cmake
component/mapping/: Mapping_Files.cmake  Mapping_Links.cmake  ModelOrderReductionMapping.cpp  ModelOrderReductionMapping.h  ModelOrderReductionMapping.inl
doc/: Doxyfile  ModelOrderReduction.tex  index.html
doc/examples/: ModelOrderReduction.html
doc/examples/CaduceusRevisited/: reduced_EnrichedCaduceus.py
doc/examples/MultiGait-SoftRobot/: reducedMultiGait-softRobot.html  reducedMultiGait-softRobot.pyscn
doc/examples/SOFIA/: DemoSofia.py
doc/examples/SphereOnAPlane/: lambdaCoeffsVLONG7.txt  lambdaCoeffsWithFrictionPoint.txt  lambdaModesVLONG7.txt  lambdaModesWithFrictionPoint.txt  softSphereFalling.pyscn
doc/examples/liver/: K-Tiny.txt  K-VCoarse.txt  M-Tiny.txt  M-VCoarse.txt  diplayNormalModes.state  liverFine.pyscn  myTinyNormalModes.txt  myTinyNormalModes.txt.txt  myTinyNormalModes.txt_sparse.txt  myVCoarseNormalModes.txt
doc/examples/reduced_diamond/: phase3_performECSW.py
doc/examples/reduced_starfish/: phase3_performECSW.py
doc/sphinx/: .readthedocs.yaml  Makefile  make.bat  requirements.readthedocs.txt
doc/sphinx/source/: components.rst  conf.py  index.rst  references.bib  requirements.txt  tools.rst
examples/: .scene-tests  DiamondRobot_ROM_felix.py  DiamondRobot_ROM_felix.pyscn  DiamondRobot_snapshotGeneration.py  DiamondRobot_snapshotGeneration_ECSW.py  DiamondRobot_snapshotGeneration_PerformECSW.py  DiamondRobot_snapshotGeneration_PrepareECSW.py  RegressionStateScenes.regression-tests  config.yml  reduceModel.sh
examples/ECSWdata_stored/: listActiveNodes_DiamondExhaustiveQuite31Modes.txt  reducedIntegrationDomain_DiamondExhaustiveQuite31modes.txt  weights_DiamondExhaustiveQuite31modes.txt
examples/Mesh/: myDiamondQuiteFine.vtu
examples/Model_Reduction/: MOR_PerformECSW.py  MOR_PrepareECSW.py  MOR_snapshotGeneration.py  config.yml  reduceModel.sh  sceneGeneration.py
examples/MultiGait-SoftRobot/: keyInteractiveController.py  reducedMultiGait-softRobot.pyscn
examples/Script_Python/: convertRIDinActiveNodes.py  readGieFileAndComputeRIDandWeights.py  readStateFilesAndComputeModes.py  test_yaml.py
examples/State_Files/: myStateFile_init.state
examples/Tests/: Test_IPython.ipynb  Test_IPython.md  modelOrderReductionScript.py  originalScene.py  phase1_snapshots.py  phase2_prepareECSW.py  phase3_reducedModel.py  test_Cheetah.pyscn  test_STDLIB.pyscn  test_SofaLauncher.py
examples/bouncingBall/: RID.txt  modes.txt  softSphereFalling.py  softSphereFalling_reduced.py  sphere.stl  weights.txt
examples/organs/liver/: liverFine.pyscn  liverFineHyperElastic.pyscn  liverFine_gravity.py  liverFine_rotationalActuation.py
examples/others/SphereOnAPlane/: softSphereFalling.pyscn  sphere.brep  sphere.vtk  sphereFine.stl
examples/others/caduceus/: caduceusNG.pyscn
examples/others/hexaBeam/: hexaBeam.pyscn  hexaBeam_gravity.py
examples/pythonControllers/: saveNodesInfo.py  shakeDiamondRobotNG.py
examples/softRobots/diamond/: diamondRobot.py  diamondRobotHyperElastic.py
examples/softRobots/finger/: finger.pyscn
examples/softRobots/multiGait/: multiGait.py  reducedMultiGait-softRobot.html  reducedMultiGait-softRobot.pyscn  reducedMultiGait-softRobot.pyscn.qglviewer.view
examples/softRobots/sofiaLeg/: sofiaLeg.py
extlibs/ViennaCL-1.7.1/cmake/: ViennaCLCommon.cmake
python/: readStateFilesAndComputeModes.py
python/mor/: __init__.py
python/mor/animation/: __init__.py  shakingAnimations.py
python/mor/controller/: lambdaDumper.py
python/mor/gui/: __init__.py  completer.py  existingAnimation.py  genericDialogForm.py  ui_design.py  ui_design.ui  ui_mor.py  utility.py
python/mor/reducedModel/: __init__.py
python/mor/reduction/: __init__.py  reduceModel.py
python/mor/script/: __init__.py  convertRIDinActiveNodes.py  modelOrderReductionScript.py  morUtilityFunctions.py  readGieFileAndComputeRIDandWeights.py  readMechanicalMatricesAndComputeVibrationModes.py  reduceModel.py  reduceModel_old.py  sceneCreationUtility.py  utility.py
python/mor/utility/: __init__.py  graphScene.py  sceneCreation.py  utility.py  writeScene.py
python/morlib/: README.md  __init__.py
python3/mor/: __init__.py
src/ModelOrderReduction/: config.h.in  initModelOrderReduction.cpp
src/ModelOrderReduction_test/: CMakeLists.txt
src/component/: initModelOrderReduction.cpp  initModelOrderReduction.h  initModelOrderReduction.h.in
tools/: cfg_diamondRobot.yml  cfg_liver.yml  cfg_quadruped.yml  cfg_sofia.yml  gui_modelOrderReduction.py  modelOrderReduction.ipynb  modelOrderReduction.py  test_component.py  ui_design.py  ui_modelOrderReduction.py
tools/diamond/: log.py  mySavedScene.py  phase3_performECSW.py  test_create_component.py
tools/gui/: gui_modelOrderReduction.py
tools/notebook/: README.md  modelOrderReduction.ipynb  modelOrderReductionHexaBeam.ipynb
tools/sofa_test_scene/: caduceusNG.pyscn  diamondRobot.py  diamondRobotHyperElastic.py  diamondRobotWithPrefab.py  hexaBeam.pyscn  liverFine.pyscn  liverFineHyperElastic.pyscn  quadruped.py  quadruped_snapshotGeneration.py  sofiaLeg.py
tools/starfish/: log.py  mySavedScene.py  phase3_performECSW.py  test_create_component.py
tools/test/: test_component.py
(+487 files in other folders)
